<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ffff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <Button
            android:id="@+id/yangilash"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_marginRight="2dp"
            />

        <Button
        android:id="@+id/smsjunatish"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/sms" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:hint="@string/regionlar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autotanlashregion"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"

            android:hint="@string/manzillar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/autotanlashmanzil"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <EditText
        android:id="@+id/qidirishsh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ffff"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:hint="@string/qidirish"
        android:inputType="text"
        android:minHeight="48dp" />
<androidx.recyclerview.widget.RecyclerView
    android:layout_below="@+id/qidirishsh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/myListView"
    />
  </RelativeLayout>
<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/progressbar"
    android:layout_gravity="center"
    />
</FrameLayout>